# my-app-repo

./: .cursorignore  .cursorrules  .env.example  .gitignore  .openhands_instructions  CONVENTIONS.md  Dockerfile.dev  LICENSE  Makefile  README.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  requirements.txt  setup.cfg
.openhands/: setup.sh  start.sh
api/: Cargo.toml  Dockerfile  entrypoint.sh
api/src/: main.rs
api/src/auth_middleware/: auth.rs  mod.rs
api/src/config/: mod.rs
api/src/handlers/: health.rs  items.rs  mod.rs  users.rs
api/src/middleware/: auth.rs
api/src/models/: item.rs  mod.rs  user.rs
api/src/utils/: password.rs
backend/: Dockerfile  main.py  requirements.txt
backend/app/: __init__.py
backend/app/api/: __init__.py  routes.py
backend/app/config/: __init__.py  config.py
backend/app/db/: __init__.py  database.py  schema.sql
backend/app/models/: __init__.py  item.py  user.py
backend/app/utils/: __init__.py  auth.py  logging.py
nginx/: nginx.conf
scripts/: setup-dev.sh
static/css/: styles.css
static/html/: 404.html  50x.html
static/js/: main.js
supervisor/: supervisord.conf
web/: Cargo.toml  Dockerfile
web/src/: main.rs
web/src/config/: mod.rs
web/src/handlers/: index.rs  items.rs  mod.rs  users.rs
web/src/models/: mod.rs
web/src/utils/: mod.rs
web/templates/: about.html  base.html  index.html  items.html  users.html
