[package]
name = "my-app"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "api"
path = "src/main.rs"

[dependencies]
actix-web
actix-web-middleware-keycloak-auth
actix-cors
serde = { features = ["derive"] }
serde_json
tokio = { features = ["full"] }
sqlx = { features = ["runtime-tokio-rustls", "sqlite", "runtime-tokio"] }
dotenv
env_logger
log
futures
futures-util
prometheus-client = { features = ["encoding"] }
lazy_static
jsonwebtoken
