[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.4.0"
actix-cors = "0.6.4"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
tokio = { version = "1.32.0", features = ["full"] }
log = "0.4.20"
env_logger = "0.10.0"
dotenv = "0.15.0"
futures = "0.3.28"
chrono = { version = "0.4.31", features = ["serde"] }
uuid = { version = "1.4.1", features = ["v4", "serde"] }
jsonwebtoken = "8.3.0"
ring = "0.16.20"
base64 = "0.21.4"
getrandom = "0.2.10"
lazy_static = "1.4.0"
reqwest = { version = "0.11.20", features = ["json"] }

