[package]
name = "web"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.4.0"
actix-files = "0.6.2"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
tokio = { version = "1.32.0", features = ["full"] }
log = "0.4.20"
env_logger = "0.10.0"
dotenv = "0.15.0"
askama = "0.12.0"
reqwest = { version = "0.11.20", features = ["json"] }
lazy_static = "1.4.0"

